Updated photo link

--- a/template.html
+++ b/template.html
@@ -5,7 +5,7 @@
   <header>
     <!-- here’s the avatar -->
     <a target="_blank" href="#">
-      <img src="http://lorempixel.com/150/150/people/" class="hoverZoomLink">
+      <img src="{{basics.picture}}" class="hoverZoomLink">
     </a>
 
     <!-- the username -->
