Renamed and un-commented template.css

--- a/template.html
+++ b/template.html
@@ -1,6 +1,6 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<!--link href="main.css" rel="stylesheet"-->
+<link href="template.css" rel="stylesheet">
 <aside class="profile-card">
   <header>
     <!-- here’s the avatar -->
