Display none style removed

--- a/template.html
+++ b/template.html
@@ -490,7 +490,7 @@
   <header>
     <!-- here’s the avatar -->
     <a target="_blank" href="#">
-      <img src="{{basics.picture_fullpath}}" class="profileimg hoverZoomLink" style="display:none;">
+      <img src="{{basics.picture_fullpath}}" class="hoverZoomLink">
     </a>
 
     <!-- the username -->
