--- a/template.html
+++ b/template.html
@@ -70,8 +70,9 @@
 		  transform: translate(-50%, -50%);
 		  -webkit-border-radius: 50%;
 		  border-radius: 50%;
-		  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.23);
-		  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.23);
+   		 -webkit-box-shadow: 0px 0px 28px 3px rgba(0,0,0,0.75);
+		 -moz-box-shadow: 0px 0px 28px 3px rgba(0,0,0,0.75);
+		  box-shadow: 0px 0px 28px 3px rgba(0,0,0,0.75);		  
 		  -webkit-animation: init 0.5s 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, moveDown 1s 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards, moveUp 1s 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards, materia 0.5s 2.7s cubic-bezier(0.86, 0, 0.07, 1) forwards;
 		  animation: init 0.5s 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, moveDown 1s 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards, moveUp 1s 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards, materia 0.5s 2.7s cubic-bezier(0.86, 0, 0.07, 1) forwards;
 		}
