--- a/template.html
+++ b/template.html
@@ -58,12 +58,11 @@
 		.profile-card {
 		  background: #FFB300;
 		  width: 56px;
-		  height: 56px;
 		  position: absolute;
 		  left: 50%;
 		  top: 50%;
 		  z-index: 2;
-		  overflow: hidden;
+		  overflow: inherit;
 		  opacity: 0;
 		  margin-top: 70px;
 		  -webkit-transform: translate(-50%, -50%);
@@ -174,6 +173,9 @@
 		  -webkit-border-radius: 50%;
 		  border-radius: 50%;
 		}
+		.profile-social-links li a:hover {
+		  color: hotpink;
+		}
 
 		.profile-social-links li a i {
 		  position: relative;
@@ -192,7 +194,6 @@
 		  }
 		  100% {
 			width: 56px;
-			height: 56px;
 			margin-top: 0px;
 			opacity: 1;
 		  }
@@ -205,7 +206,6 @@
 		  }
 		  100% {
 			width: 56px;
-			height: 56px;
 			margin-top: 0px;
 			opacity: 1;
 		  }
@@ -480,7 +480,7 @@
 			}
 			100% {
 			  width: 280px;
-			  height: 440px;
+			  /*height: 440px;*/
 			  background: #FFFFFF;
 			  border-radius: 4px;
 			}
