Made 'basics.summary' to support html tags

--- a/template.html
+++ b/template.html
@@ -504,7 +504,7 @@
   <!-- bit of a bio; who are you? -->
   <div class="profile-bio">
 
-    <p>{{basics.summary}}</p>
+    <p>{{&basics.summary}}</p>
 
   </div>
 
