--- a/template.html
+++ b/template.html
@@ -8,7 +8,14 @@
 
 		body {
 		  overflow: hidden;
-		  background-color: #277185;
+	  
+		{{#theme.background-color}}
+			background-color: {{theme.background-color}};
+		{{/theme.background-color}}
+		{{^theme.background-color}}
+			background-color: #277185;
+		{{/theme.background-color}}
+	
 		  background-size: cover;
 		  position: fixed;
 		  padding: 0px;
